Dynamic carousel + style header fix alignement

--- a/src/app/component/header/header.component.scss
+++ b/src/app/component/header/header.component.scss
@@ -9,7 +9,7 @@
   box-shadow: #26394d47 0 -8px 6px 11px;
 
   &.header-mobile {
-    background: url('../../../assets/images/1636016070753.jpg') bottom;
+    background: url('../../../assets/images/uriel-WS4JcpoZz6E-unsplash.jpg') bottom;
     background-size: 100%;
   }
 
@@ -41,7 +41,7 @@
     }
 
     &.title-mobile {
-      margin-top: 130px;
+      margin-top: 150px;
     }
   }
 
@@ -98,7 +98,7 @@
     }
 
     .title-mobile {
-      margin-top: 130px;
+      margin-top: 150px;
     }
 
   }
@@ -198,7 +198,7 @@
     .company {
       color: #333333;
       align-self: center;
-      margin-right: 75px;
+      margin-right: 30px;
     }
   }
 
